# nat_opencv_c

./: CMakeLists.txt  morph.c  nazt.c  nazt.cpp
